Fix email format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,12 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 find_package(CURL REQUIRED)
+find_package(LibXml2 REQUIRED)
 
-include_directories(/usr/local/include)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include(../../../w/common/macros.cmake)
+include_directories(${LIBXML2_INCLUDE_DIR})
+include_directories(${CURL_INCLUDE_DIR})
 include_directories(../../../w)
 
 gen_version_c()
@@ -23,8 +25,12 @@ add_executable(departures
 	util.c
 	${CMAKE_CURRENT_BINARY_DIR}/version.c)
 
+add_dependencies(departures mkresource)
+
 target_link_libraries(
 	departures
 	${CURL_LIBRARY}
 	svc
 )
+
+install(TARGETS departures RUNTIME DESTINATION bin)
